share-basic/share-api/src/main/resources/share-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: share-api-svc
  name: share-api-svc
  namespace: share-app
spec:
  ports:
    - port: 9090
      name: http9090
      protocol: TCP
      targetPort: 9090
      nodePort: 31091
  selector:
    app: share-api
  type: NodePort
