share-basic/share-api/src/main/resources/share-api-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: share-api-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: share-api-vs
spec:
  hosts:
    - "*"
  gateways:
    - share-api-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: share-api
            port:
              number: 9090
